Fixed some themes have a little horizontal overflow in mobile mode (solved by setting only overflow-y: auto on main)

--- a/assets/css/back.css
+++ b/assets/css/back.css
@@ -175,7 +175,7 @@ a:hover img.icon {
 @media (max-width: 550px) {
     main {
         flex-direction: column;
-        overflow: auto;
+        overflow-y: auto;
     }
 
     main > * {
